#12 - corrected the alignment of price and buttons

--- a/.design/events-plugin-code/css/all-bs.css
+++ b/.design/events-plugin-code/css/all-bs.css
@@ -725,3 +725,6 @@
     padding-top: 15px;
   }
 }
+.aj .pull-right {
+  float: right !important;
+}
